raft of changes

--- a/fuzzy/shop/templates/basket.html
+++ b/fuzzy/shop/templates/basket.html
@@ -218,7 +218,7 @@ $(document).ready( function() {
 
 
 	 
-	 
+	 {% comment %}
 	 <div class="basket-row postage pure-u-1">
 		
 		<div class="pure-u-1-12">&nbsp;</div>
@@ -245,6 +245,7 @@ $(document).ready( function() {
 		<div class="pure-u-1-8">&nbsp;</div>
 		
 	</div>
+	{% endcomment %}
 	
 
 	<div class="basket-row pure-u-1" id="discount">
