--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -200,6 +200,20 @@ input[type="text"], input[type="email"], textarea {
     color: #999;
 }
 
+input.error {
+  border: 1px solid #981212;
+  background: #f5d4d4;   
+  color: #981212;
+}
+
+ul.errorlist {
+  margin: 15px 0;
+  padding: 0;
+  list-style-type: none;
+  color: #981212;
+  font-weight: bold;
+}
+
 /* END FORMS */
 
 .centered {
@@ -322,7 +336,8 @@ input[type="text"], input[type="email"], textarea {
 /* HOMEPAGE SPECIFIC */
 
 #intro {
-  padding: 0 20px;   
+  padding: 0 20px; 
+  text-align: center;  
 }
 
 #intro #mugshot {
@@ -331,7 +346,7 @@ input[type="text"], input[type="email"], textarea {
 }
 
 #intro p.intro {
-  font-size: 1.2em;
+  font-size: 1.6em;
   margin: 0 0 0px 0;  
 }
 
