--- a/fuzzy/shop/templates/snippets/footer.html
+++ b/fuzzy/shop/templates/snippets/footer.html
@@ -19,8 +19,8 @@
     
     <ul id="social" class="pure-u-1-3 right">
         <li class="first">Find us on:</li>
-        <li><a id="pinterest" href="http://www.pinterest.com/gofuzzymoose/"></a></li>
-        <li><a id="facebook" href="http://www.facebook.com/fuzzymoosekitchen"></a></li>
+        <li><a target="_blank" id="pinterest" href="http://www.pinterest.com/gofuzzymoose/"></a></li>
+        <li><a target="_blank" id="facebook" href="http://www.facebook.com/fuzzymoosekitchen"></a></li>
     </ul>
     
   </div>	
