raft of changes

--- a/fuzzy/templates/blog/snippets/right.html
+++ b/fuzzy/templates/blog/snippets/right.html
@@ -5,8 +5,8 @@
 		<div class="pure-g-r">
 		  <div class="pure-u-7-8 box white">
 		      <div class="inner">
-    		      <h3>About FuzzyMoose</h3>
-    		      <p>Here's some introduction text about the blog</p>
+    		      <h3>About this blog</h3>
+    		      <p>Updates and news on what's going on at Fuzzy Moose HQ </p>
     		  </div>
 		  </div>
 		  
