--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -598,6 +598,15 @@ ul.rss #facebook {
   margin: 5px 0 10px;   
 }
 
+#footer ul li:first-child strong a {
+  color: #333;   
+}
+
+#footer ul li:first-child strong a:hover {
+  text-decoration: underline;   
+}
+
+
 #footer ul {
   list-style-type: none;
   padding: 0 30px 0 0;
