--- a/fuzzy/shop/templates/snippets/footer.html
+++ b/fuzzy/shop/templates/snippets/footer.html
@@ -11,7 +11,7 @@
     </div>
     
     <ul class="pure-u-1-3">
-        <li><strong>From our blog</strong></li>
+        <li><strong><a href="{% url 'blog_home' %}">From our blog</a></strong></li>
         {% for x in latest_blogs %}
         <li><a href="{{ x.get_absolute_url }}">{{ x.title }}</a></li>
         {% endfor %}
