--- a/fuzzy/shop/templates/basket.html
+++ b/fuzzy/shop/templates/basket.html
@@ -116,10 +116,10 @@ $(document).ready( function() {
 			<a class="selected" href="{% url 'basket' %}">1. Your basket</a>
 		</li>
 		<li>
-			<a class="" href="{% url 'order_step_one' %}">2. Your details</a>
-		</li>
+			2. Your details
+	   </li>
 		<li>
-			<a href="">3. Confirm and pay</a>
+			3. Confirm and pay
 		</li>
 	</ul>
 	
@@ -189,32 +189,7 @@ $(document).ready( function() {
 	{% endfor %}
 	
     
-    {% if shopsettings.flat_fee_postage_price %}
-    <div class="basket-row postage pure-u-1">
-		<div class="pure-u-1-12">&nbsp;</div>
-        
-        {% if postage_discount %}
-            <div class="pure-u-1-2">
-        	  	<span class="strikethrough name">Postage</span>
-            </div>  
-            <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ shopsettings.flat_fee_postage_price|floatformat:"2" }}</div>
-        
-        
-        {% else %}
-        
-            <div class="pure-u-1-2">
-    			<span class="name">Postage</span>
-    			<span class="small">Delivered in 1-3 days | Shipped from the UK</span>
-    		</div>
-    		
-    		<div class="pure-u-1-12"></div>
-    		<div class="pure-u-1-6"></div>
-    		<div class="pure-u-1-8 right">{{ currency.symbol }}{{ shopsettings.flat_fee_postage_price|floatformat:"2" }}</div>
-    		
-        {% endif %}        
     
-    </div>   	        	
-    {% endif %}
 
 
 	 
@@ -282,10 +257,10 @@ $(document).ready( function() {
 	<div class="basket-row totals pure-u-1">
 		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-1-2">
-			<span class="name">Total</span>
+			<span class="name">&nbsp;</span>
 		</div>
 		<div class="pure-u-1-8">&nbsp;</div>
-		<div class="pure-u-1-12">&nbsp;</div>
+		<div class="pure-u-1-12">Subtotal</div>
 		<div class="pure-u-1-8">
 			{{ currency.symbol }}{{ total_price|floatformat:"2" }}
 		</div>
