--- a/fuzzy/shop/templates/home.html
+++ b/fuzzy/shop/templates/home.html
@@ -118,6 +118,7 @@ $('.info.tea a.button').click( function() {
         
         <div class="hr"></div>
         
+        {% if shopsettings.homepage_image %}
         <div id="photo-banner" class="pure-g">
           <div class="pure-u-1">
             {% thumbnail shopsettings.homepage_image "900x350" crop="center" as im %}
@@ -128,6 +129,7 @@ $('.info.tea a.button').click( function() {
             </div>
           </div>
         </div>
+        {% endif %}
 
     </div>
   </div>
