--- a/fuzzy/templates/blog/home.html
+++ b/fuzzy/templates/blog/home.html
@@ -43,17 +43,13 @@
   border-bottom: none;	
 }
 
-.entry .image {
+.entry .text img {
   float: right;
   margin: 0 0px 0 15px;
 }
 
 .entry .text {
   float: left;
-  width: 405px;	
-}
-
-.entry .text.long {
   width: 600px;	
 }
 
