--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -1,11 +1,15 @@
 
 /* GLOBAL STYLES */
 
+html {
+ background-image: url('../images/cardboard_flat.png');   
+}
+
 body {
   color: #333;
   text-shadow: 0 1px 1px #fff;
   background: url('../images/cardboard_flat.png') repeat top left;  
-  background-image: url('../images/cardboard_flat.png') repeat top left;
+  background-image: url('../images/cardboard_flat.png');
   margin: 0;
   padding: 0; 
 }
