background image changes

--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -4,7 +4,7 @@
 body {
   color: #333;
   text-shadow: 0 1px 1px #fff;
-  background: url('../images/cardboard_flat.png') repeat top left !important;  
+  background: url('../images/cardboard_flat.png') repeat top left red!important;  
   background-image: url('../images/cardboard_flat.png'); /* FOR STUPID IE9 */
   margin: 0;
   padding: 0; 
