--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -82,7 +82,7 @@
 
 
 
-<body>	 
+<body background="{% static 'images/cardboard_flat.png' %}">	 
 
 {% if ga_is_on %}
 <!-- FACEBOOK LIKE BUTTON JAVASCRIPT -->
