--- a/fuzzy/shop/templates/forms/order_step_one.html
+++ b/fuzzy/shop/templates/forms/order_step_one.html
@@ -101,6 +101,18 @@ $(document).ready( function() {
   margin: 10px 0 0; 
 }
 
+#summary table {
+  width: 100%;   
+}
+
+#summary table tr td {
+  border-bottom: 1px solid #e1e1e1;
+  padding: 5px 0;   
+}
+
+#summary table tr td:last-child {
+  text-align: right;   
+}
 
 
 
