--- a/fuzzy/shop/templates/forms/order_step_one.html
+++ b/fuzzy/shop/templates/forms/order_step_one.html
@@ -107,7 +107,8 @@ $(document).ready( function() {
 
 #summary table tr td {
   border-bottom: 1px solid #e1e1e1;
-  padding: 5px 0;   
+  padding: 5px 0;
+  font-size: 13px;   
 }
 
 #summary table tr td:last-child {
