--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -69,8 +69,15 @@
 
 	
 	<!--[if IE]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <style type="text/css">
+
+        #intro ul li {
+          padding: 7px 15px 5px 15px;   
+        }
+
+    </style>
+    <![endif]-->
 
 	
     {% block ga %}  
