new background image

--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -72,6 +72,12 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <style type="text/css">
 
+        .centered {
+          margin: 0 auto;
+          position: relative;
+          left: 0;  
+        } 
+
         #intro ul li {
           padding: 7px 15px 10px 15px;   
         }
