new background image

--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -75,7 +75,8 @@
         .centered {
           margin: 0 auto;
           position: relative;
-          left: 0;  
+          left: auto;
+          margin-left: auto;  
         } 
 
         #intro ul li {
