new background image

--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -4,7 +4,7 @@
 body {
   color: #333;
   text-shadow: 0 1px 1px #fff;
-  background: url('../images/cardboard_flat.jpg') repeat top left #fff!important;  
+  background: url('../images/cardboard_flat.jpg') repeat top left #e7e4d9!important;  
   background-image: url('../images/cardboard_flat.jpg'); /* FOR STUPID IE9 */
   margin: 0;
   padding: 0; 
