--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -243,16 +243,14 @@ ul.errorlist {
 }
 
 #basket {
-  height: 5px;
-  position: absolute;
+  border-top: 5px solid #F6F3EB;
   width: 100%;
-  background: none repeat scroll 0 0 #F6F3EB;
 }
 
 #basket .tab {
   position: absolute;
   right: 0px;
-  bottom: -28px;
+  bottom: -25px;
   background: none repeat scroll 0 0 #F6F3EB;
   padding: 7px 20px 5px;
   border-radius: 0 0 15px 15px;
@@ -268,7 +266,6 @@ ul.errorlist {
 #basket .tab.selected {
   font-size: 1em;
   padding-top: 10px;
-  bottom: -35px;   
 }
 
 #basket .tab#currency {
