new background image

--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -1,5 +1,5 @@
 {% load nav_selected i18n staticfiles thumbnail  %}
-
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -8,6 +8,7 @@
 	<meta content="{{ LANGUAGE_CODE }}" http-equiv="Content-Language" />
 	<meta content="{% block metadescription %}{% endblock %}" name="description" />
 	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
 	<meta name="msvalidate.01" content="" />
   	<meta name="google-site-verification" content="" />
