--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -252,7 +252,7 @@ ul.errorlist {
   float:right;
   bottom: -25px;
   background: none repeat scroll 0 0 #F6F3EB;
-  padding: 7px 20px 5px;
+  padding: 5px 20px;
   border-radius: 0 0 15px 15px;
   font-size: 0.8em;
   font-weight: bold;
