--- a/fuzzy/shop/templates/home.html
+++ b/fuzzy/shop/templates/home.html
@@ -82,7 +82,7 @@ $('.info.tea a.button').click( function() {
         
         <!-- START PRODUCTS -->
         <div class="pure-g" id="products">
-            {% for x in featured_products %}
+            {% for x in products %}
             <div class="pure-u-1-3 product">
                 <a href="{{ x.get_absolute_url }}"><span class="link"></span></a>
                 <div class="inner">
