--- a/fuzzy/shop/templates/order_complete.html
+++ b/fuzzy/shop/templates/order_complete.html
@@ -28,7 +28,7 @@
     <p>{% trans "Please note, we must confirm payment is received before we can ship any orders. If there is a problem with your order, we will contact you immediately to resolve this. Many thanks for your patience." %}</p>
     
     
-    <p>{% blocktrans %}If for any reason you need to contact us, email us at <a href="mailto:{{ contact_email }}">{{ contact_email }}</a> and quote your order ID ({{ order.order_id }}). Thanks for your patience!{% endblocktrans %}</p>
+    <p>If for any reason you need to contact us, email us at <a href="mailto:{{ contact_email }}">{{ contact_email }}</a> and quote your order ID ({{ order.order_id }}). Thanks for your patience!</p>
 
     </div>
     
