various changes, products now out of stock not prices

--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -60,7 +60,7 @@
 	   
 	   {% if shopsettings.main_background_color %}
 	   body {
-	     background-color: {{ shopsettings.main_background_color }};   
+	     background-color: #{{ shopsettings.main_background_color }};   
 	   }
 	   {% endif %}
 	   
@@ -74,7 +74,7 @@
 	   
 	   {% if shopsettings.footer_background_color %}
 	       #footer {
-	           background-color: {{ shopsettings.footer_background_color }}; 
+	           background-color: #{{ shopsettings.footer_background_color }}; 
 	   }
 	   {% endif %}
 	   
