--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -47,7 +47,7 @@
 	
 	   {% if shopsettings.link_color %}
 	   a:link, a:visited, span.toggle {
-	     color: {{ shopsettings.link_color }};   
+	     color: #{{ shopsettings.link_color }};   
 	   }
 	   {% endif %}
 	   
@@ -55,13 +55,18 @@
 	       body {
 	           background-image: url('{% thumbnail shopsettings.main_background_image "" crop="" as im %}{{ im.url }}{% endthumbnail %}') repeat top left;  
 	       }
+	   {% else %}
+	       body {
+	         background: url('../images/cardboard_flat.jpg') repeat top left #e7e4d9!important;  
+             background-image: url('../images/cardboard_flat.jpg'); /* FOR STUPID IE9 */   
+	       }
 	   {% endif %}
 	   
 	   
 	   {% if shopsettings.main_background_color %}
-	   body {
-	     background-color: #{{ shopsettings.main_background_color }};   
-	   }
+	       body {
+	           background-color: #{{ shopsettings.main_background_color }};   
+	       }
 	   {% endif %}
 	   
 	   
@@ -69,7 +74,11 @@
 	       #footer {
 	           background-image: url('{% thumbnail shopsettings.footer_background_image "" crop="" as im %}{{ im.url }}{% endthumbnail %}') repeat top left; 
 	   }
-	   
+	   {% else %}
+	       #footer {
+    	       background: url("../images/footer_back.png") repeat left top #f1f1f1 !important;
+                background-image: url("../images/footer_back.png"); /* STOOPID CHROME */
+	       }
 	   {% endif %}
 	   
 	   {% if shopsettings.footer_background_color %}
