various changes, products now out of stock not prices

--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -120,7 +120,7 @@
 
 
 
-<body background="{% static 'images/cardboard_flat.png' %}">	 
+<body>	 
 
 {% if ga_is_on %}
 <!-- FACEBOOK LIKE BUTTON JAVASCRIPT -->
