--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -28,8 +28,8 @@
 	{% block canonical %}{% endblock %}
 	{% block extra-head %}{% endblock %}
 
-	<link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.3.0/base-min.css">
-    <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+	<link rel="stylesheet" href="{% static 'css/base-min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pure-min.css' %}">
     
 	<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
