--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -35,7 +35,7 @@
     <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 	    
 	{% if ga_is_on %}
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 	{% else %}
 		<script src="{% static 'js/jquery-1.9.1.js' %}"></script>
 	{% endif %}
